stryker/Metadata/unpackaged/objects/Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cheque No</label>
        <referenceTo>Cheque_Details__c</referenceTo>
        <relationshipLabel>Cheque_No</relationshipLabel>
        <relationshipName>Cheque_No</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice No</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rference_Number__c</fullName>
        <label>Rference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>